--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529590690
+    eco: null
+    guid: 7443a1c6-b2d3-4665-9d5e-7f6683ca4d76
+    state: running
+-   action_name: save
+    args: null
+    created: 1529590690
+    eco: null
+    guid: 0275500e-6742-4e74-b132-e5993df80e83
+    state: new
