--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529591350
+    eco: null
+    guid: 8c6e1c58-3992-46f5-baba-f7c9603964a9
+    state: running
