--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529593390
+    eco: null
+    guid: 7b4b3786-6569-4275-bd19-f40b6f8e128f
+    state: running
+-   action_name: save
+    args: null
+    created: 1529593390
+    eco: null
+    guid: ef9b3116-6186-4246-bed6-0f086336dd67
+    state: new
