--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529825752
+    created: 1529825822
     eco: null
-    guid: cf3f1de6-f5f3-4792-a8ce-d7fd5a0aa15e
+    guid: b0809ca3-aad1-49d3-a484-a37a85e12da9
     state: running
