--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529826082
+    eco: null
+    guid: 57ea3a11-3463-4010-813b-9770ef382120
+    state: running
+-   action_name: save
+    args: null
+    created: 1529826082
+    eco: null
+    guid: ad35fed9-3ea8-4f9c-85e6-cb974a241adc
+    state: new
