--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529826652
+    eco: null
+    guid: eb073d4d-5330-4672-910d-493e60886515
+    state: running
+-   action_name: save
+    args: null
+    created: 1529826652
+    eco: null
+    guid: c0778414-7cff-4187-887c-39fab63bc759
+    state: new
