--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529827162
+    eco: null
+    guid: fdad07bc-b32c-4eff-a74f-25079c772583
+    state: running
+-   action_name: save
+    args: null
+    created: 1529827162
+    eco: null
+    guid: c37a4eef-aae9-4747-a808-e528d68c43ca
+    state: new
