--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529827162
+    eco: null
+    guid: 33e25a2f-f1b7-4115-8dbb-12536e5085c2
+    state: running
