--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529828812
+    eco: null
+    guid: 709e5fdb-93f1-4b5c-9970-c4c6c94e4195
+    state: running
+-   action_name: save
+    args: null
+    created: 1529828812
+    eco: null
+    guid: 18cfaa66-e9d0-4c22-9014-76b9a596fad3
+    state: new
