--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529830042
+    eco: null
+    guid: 94ca42c5-c323-4998-9a4f-cba148a3d310
+    state: running
+-   action_name: save
+    args: null
+    created: 1529830042
+    eco: null
+    guid: cd0cc843-7abe-4e67-91eb-0428b94ae7e1
+    state: new
