--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529830492
+    eco: null
+    guid: 50f29412-b8af-400c-b076-b58d8d036423
+    state: running
+-   action_name: save
+    args: null
+    created: 1529830492
+    eco: null
+    guid: ce760a62-c927-45b6-bb4a-3bf5dbbb69e0
+    state: new
