--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,12 @@
 -   action_name: _monitor
     args: null
-    created: 1529830882
+    created: 1529830942
     eco: null
-    guid: baef162e-7031-4cf9-93ec-67a96e7fb190
+    guid: 2d0974a0-69bf-4f14-8bc2-c6e654e90d24
     state: running
+-   action_name: save
+    args: null
+    created: 1529830942
+    eco: null
+    guid: d4963bf9-cf8d-47c0-a220-9576a51e1f0f
+    state: new
