--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529830942
+    created: 1529831012
     eco: null
-    guid: 757d4142-ba7e-4222-a56f-6b68b46a12cc
+    guid: cd3255e3-ec8b-4f6b-900f-07b25447801f
     state: running
