--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: save
+-   action_name: _monitor
     args: null
-    created: 1529832232
+    created: 1529832292
     eco: null
-    guid: 84c1d76b-41d5-4786-bfdb-4945a96a95ba
+    guid: a10d42d3-97f8-4953-83d9-2ddf1dc2252f
     state: running
