--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,12 @@
 -   action_name: _monitor
     args: null
-    created: 1529832742
+    created: 1529832802
     eco: null
-    guid: ce3626a8-dfd0-4b6f-91c5-93ac240ab5a3
+    guid: c9b49450-533e-4f68-942b-d55f76c08462
     state: running
+-   action_name: save
+    args: null
+    created: 1529832802
+    eco: null
+    guid: a07db508-d2d3-4d92-8131-f09ae43480ba
+    state: new
