--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529832802
+    created: 1529832872
     eco: null
-    guid: f5fd234d-0690-4697-919c-a71594c4a88f
+    guid: fed205d0-3491-4451-975f-d5b35700f40e
     state: running
