--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529832802
+    created: 1529832872
     eco: null
-    guid: a2603cdf-cadf-43be-bcc8-5c0caf60420e
+    guid: 7c58206a-c43e-4db8-b488-7b7092b6d290
     state: running
