--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529834212
+    eco: null
+    guid: 5907d058-2eb4-4e0e-b5f5-0d117b9be854
+    state: running
+-   action_name: save
+    args: null
+    created: 1529834212
+    eco: null
+    guid: a92cc426-ab52-402d-ba78-2af841b5b8b0
+    state: new
