--- a/zrobot_data/github.com/zero-os/0-templates/node/local/f1a225a4-65a4-4675-afb4-97a22ff9d3b8/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/node/local/f1a225a4-65a4-4675-afb4-97a22ff9d3b8/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529835104
+    eco: null
+    guid: f815ca11-d720-410e-bde7-5ca9e1a7b0a3
+    state: running
