--- a/zrobot_data/github.com/zero-os/0-templates/node/local/f1a225a4-65a4-4675-afb4-97a22ff9d3b8/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/node/local/f1a225a4-65a4-4675-afb4-97a22ff9d3b8/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529835364
+    eco: null
+    guid: dff2b1f2-d3a6-4555-b280-c4a7565bf565
+    state: running
