--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: save
+-   action_name: _monitor
     args: null
-    created: 1529839132
+    created: 1529839192
     eco: null
-    guid: 17141f99-a7c0-41fc-8f08-5d4b69e27570
+    guid: 2beb1685-a2ca-499d-9126-d3ff3878ec92
     state: running
