--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: save
+-   action_name: _monitor
     args: null
-    created: 1529839132
+    created: 1529839192
     eco: null
-    guid: 282b9b77-b820-44d9-98ab-6fa9e9bf6b6a
+    guid: 14a614d9-a32f-41c4-9785-a37a1cbe3985
     state: running
