--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,12 @@
+-   action_name: _monitor
+    args: null
+    created: 1529839192
+    eco: null
+    guid: 2ea6f0b4-8bf5-4e41-8f5f-ca8c823845f9
+    state: running
 -   action_name: save
     args: null
-    created: 1529839132
+    created: 1529839192
     eco: null
-    guid: eea2ef4b-60a8-4b07-bd51-17db431c39fb
-    state: running
+    guid: 546dff0f-58a6-41f2-bd6f-8d1b8ba937b3
+    state: new
