--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529839762
+    created: 1529839832
     eco: null
-    guid: 25b60dcd-f23c-48c5-baee-80fe9ae8b269
+    guid: 7b741e5e-1112-4336-a3a2-b4a6ae376bf5
     state: running
