--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529839762
+    created: 1529839832
     eco: null
-    guid: 32fa5a6e-ac8b-436b-b5a7-d7a4df156275
+    guid: 1cc0bdfb-19a2-4b3e-a6b1-1e8e3f25c91b
     state: running
