--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529840722
+    eco: null
+    guid: 282b18e0-ca57-4845-863c-2932345d3204
+    state: running
