--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529841232
+    eco: null
+    guid: 334e13c6-5840-4002-a25a-e17d29f4e60a
+    state: running
+-   action_name: save
+    args: null
+    created: 1529841232
+    eco: null
+    guid: e20bd0d1-5bc8-45d4-bbdc-0f456ca75add
+    state: new
