--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529843543
+    eco: null
+    guid: 91d60a80-79fa-4ef2-bf93-7dec3c47ce4b
+    state: running
+-   action_name: save
+    args: null
+    created: 1529843543
+    eco: null
+    guid: c2299475-f51d-4fb3-a2eb-8bad23c7b883
+    state: new
