--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529843543
+    eco: null
+    guid: 0094acdf-f2b9-4054-a09b-e5f4290e551a
+    state: running
