--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529846366
+    eco: null
+    guid: 9ef58d44-e71d-438b-b7b3-1e27dccf1e64
+    state: running
