--- a/zrobot_data/webhooks.yml
+++ b/zrobot_data/webhooks.yml
@@ -1,3 +1,6 @@
 -   id: 2e5f0f37e0a1d5bf8263797dc5c04bf6
     kind: eco
     url: http://requestbin.fullcontact.com/1hoooq91
+-   id: 2434babe1aa7d6b3e4efcbf785a3f2ee
+    kind: eco
+    url: http://172.17.0.2:8200/restmachine/zrobot/client/taskCallback?authkey=005fa89e-a76a-4131-9ad8-5cdebc4e6f78
